Add autoimpl doc to README, with test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ version = "1.0.14"
 # We need 'extra-traits' for equality testing
 # We need 'full' for parsing macros within macro arguments
 features = ["extra-traits", "full"]
+
+[dev-dependencies]
+doc-comment = "0.3.3"
