Use autocfg to limit GAT test to rustc >= 1.65

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,8 @@ path = "lib"
 [dev-dependencies]
 doc-comment = "0.3.3"
 
+[build-dependencies]
+autocfg = "1.1.0"
+
 [workspace]
 members = ["lib"]
