--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -12,8 +12,11 @@ documentation = "https://docs.rs/impl-tools-lib/"
 
 [dependencies]
 quote = "1.0"
-proc-macro2 = { version = "1.0" }
-proc-macro-error = "1.0"
+proc-macro2 = "1.0"
+
+[dependencies.proc-macro-error]
+version = "1.0"
+default-features = false
 
 [dependencies.syn]
 version = "2.0.0"
