--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ autocfg = "1.1.0"
 
 [workspace]
 members = ["lib"]
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustc_1_65)', 'cfg(mock_feature)'] }
