--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install toolchain
         uses: dtolnay/rust-toolchain@nightly
-      - name: Rustfmt check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
       - name: Build docs
         run: cargo doc --all-features --all --no-deps
       - name: Test impl-tools-lib
@@ -64,3 +59,17 @@ jobs:
         run: cargo test --manifest-path lib/Cargo.toml --all-features --lib --tests
       - name: Test impl-tools
         run: cargo test --all-features --lib --tests
+
+  workspace:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: rustfmt
+      - name: rustfmt
+        run: cargo fmt --all -- --check
+      - name: clippy
+        # clippy::assigning_clones should be unnecessary in rust 1.80
+        run: cargo clippy --all --all-targets -- -A clippy::assigning_clones -D warnings
