Don't apply Clippy to tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,4 +72,4 @@ jobs:
         run: cargo fmt --all -- --check
       - name: clippy
         # clippy::assigning_clones should be unnecessary in rust 1.80
-        run: cargo clippy --all --all-targets -- -A clippy::assigning_clones -D warnings
+        run: cargo clippy --all -- -A clippy::assigning_clones -D warnings
