--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ path = "lib"
 [dev-dependencies]
 doc-comment = "0.3.3"
 twox-hash = "1.6.3"
+trybuild = "1.0.90"
 
 [build-dependencies]
 autocfg = "1.1.0"
