--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,8 +15,8 @@ rust-version = "1.58.0"
 quote = "1.0"
 proc-macro2 = "1.0"
 
-[dependencies.proc-macro-error]
-version = "1.0"
+[dependencies.proc-macro-error2]
+version = "2.0"
 default-features = false
 
 [dependencies.syn]
