--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -24,3 +24,6 @@ version = "2.0.0"
 # We need 'extra-traits' for equality testing
 # We need 'full' for parsing macros within macro arguments
 features = ["extra-traits", "full", "visit", "visit-mut"]
+
+[lints.clippy]
+needless_lifetimes = "allow"
