--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "impl-tools-lib"
 version = "0.11.1"
-edition = "2021"
 description = "Helper macros: autoimpl"
 keywords = ["derive", "trait"]
 readme = "README.md"
 documentation = "https://docs.rs/impl-tools-lib/"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+edition.workspace = true
 
 [dependencies]
 quote = "1.0"
