Warn about #[autoimpl] on trait definitions with methods bounded by Self: Sized

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ proc-macro = true
 [features]
 # Enables better proc-macro diagnostics (including warnings); nightly only.
 nightly-diagnostics = ["proc-macro-error2/nightly"]
+# Squelch lint: "autoimpl on trait that has a method with Self: Sized bound"
+allow-trait-autoimpl-with-sized-fn-bound = ["impl-tools-lib/allow-trait-autoimpl-with-sized-fn-bound"]
 
 [dependencies.proc-macro-error2]
 version = "2.0"
