--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ edition.workspace = true
 [lib]
 proc-macro = true
 
+[features]
+# Enables better proc-macro diagnostics (including warnings); nightly only.
+nightly-diagnostics = ["proc-macro-error2/nightly"]
+
 [dependencies.proc-macro-error2]
 version = "2.0"
 default-features = false
